[gd_scene load_steps=6 format=3 uid="uid://cm42apvc1qth3"]

[ext_resource type="Script" path="res://game/scripts/chapter_menu.gd" id="1_7fbyp"]
[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="1_x5ii8"]
[ext_resource type="Texture2D" uid="uid://da0yht352uf2a" path="res://game/assets/sprites/godot_prototype_assets_by_kpids/classic/tiles/small_arrow.png" id="2_0vvbo"]
[ext_resource type="Script" path="res://game/scripts/continue_menu.gd" id="4_3xain"]
[ext_resource type="PackedScene" uid="uid://bks7aenfee6gi" path="res://game/scenes/checkpoint_button.tscn" id="5_cqej7"]

[node name="ChapterMenu" type="Control"]
layout_mode = 3
anchor_left = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.10352e-05
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_x5ii8")
script = ExtResource("1_7fbyp")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
current_tab = 0
tabs_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ChapterName" type="Label" parent="TabContainer/VBoxContainer"]
layout_mode = 2
text = "ChapterName"

[node name="ChapterSummary" type="Label" parent="TabContainer/VBoxContainer"]
layout_mode = 2
text = "ChapterSummary"

[node name="ChapterArtwork" type="TextureRect" parent="TabContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0vvbo")

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="TabContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "START"

[node name="ContinueButton" type="Button" parent="TabContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="CheckpointMenu" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_3xain")
checkpoint_button_scene = ExtResource("5_cqej7")
metadata/_tab_index = 1

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 217.0
offset_right = 240.0
offset_bottom = 43.0
text = "X"

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -26.0
offset_top = 180.0
offset_right = -4.0
offset_bottom = 223.0
text = "<"

[connection signal="pressed" from="TabContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TabContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
